--- a/laxaNam/granthaH/dhvanyAlokaH/sarva-prastutiH/4.md
+++ b/laxaNam/granthaH/dhvanyAlokaH/sarva-prastutiH/4.md
@@ -14,7 +14,7 @@ title = "४"
 नान्योपकरणापेक्षो यया तां नौमि शाङ्करीम् ॥ ॥
 उद्योतान्तरसङ्गतिं विरचयितुं वृतिकार आहएवमिति ।
 प्रयोजनान्तरमिति ।
-यद्यपिऽसहदयमनःप्रीतयऽ इत्यनेन प्रयोजनं प्रागेवोक्तं, तृतीयोद्योतावधौ च सत्काव्यं कर्तुं वा ज्ञातुं वेति तदेवेषत्स्फुटीकृतं, तथापि स्फुटतरीकर्तुमिदानीं यत्नः ।
+यद्यपि "सहदयमनःप्रीतय" इत्यनेन प्रयोजनं प्रागेवोक्तं, तृतीयोद्योतावधौ च सत्काव्यं कर्तुं वा ज्ञातुं वेति तदेवेषत्स्फुटीकृतं, तथापि स्फुटतरीकर्तुमिदानीं यत्नः ।
 यतस्सुस्पष्टरूपत्वेन विज्ञायते, अतोऽस्पष्टनिरूपितात्स्पष्टनिरूपणमन्यथैव प्रतिभातीति प्रयोजनान्तरमित्युक्तम् ।
 अथवा पूर्वोक्तयोः प्रयोजनयोरन्तरं विशेषोऽभिधीयते - केन विशेषेण सत्काव्यकरणमस्य प्रयोजनं, केन च सत्काव्यबोध इति विशेषो निरूप्यते ।
 
@@ -102,7 +102,7 @@ __________
 इत्येतदिति सम्बन्धः ॥ १  ॥  ॥ ॥
 व्यधिकरणमिति ।
 असङ्गतमित्यर्थः ।
-ऽअन्यतमेनापीऽत्यपिशब्दं दर्शयतिआसतामिति ।
+ "अन्यतमेनापी"त्यपिशब्दं दर्शयतिआसतामिति ।
 एतदुक्तं भवतीति ।
 प्रथमकारिकोत्तरार्धेन द्वितीयकारिकया च वक्ष्यमाणो भावार्थः प्रदर्शितो भवतीत्यर्थः ।
 तमेवाहवर्णनीयेत्यादि ।
@@ -133,7 +133,7 @@ __________
 
 बालप्रिया
 
-ऽस्मितम्ऽ इति ।
+ "स्मितम्" इति ।
 किञ्चित्स्मितं मन्दस्मितम् ।
 मुग्धं भवति इति सर्वत्र शेष ।
 तरलश्च मधुरश्च तरलमधुरः ।
@@ -209,7 +209,7 @@ __________
 इत्यादेःश्लोकस्य,     शून्यं वासगृहं विलोक्य शयनादुत्थाय किञ्चिच्छनै      र्निद्राव्याजमुपागतस्य सुचिरं निर्वर्ण्य पत्युर्मुखम् ।
 विस्रब्धं परिचुम्ब्य जातपुलकामालोक्य गण्डस्थलीं      लज्जानम्रमुखी प्रियेण हसता बाला चिरं चुम्बिता ॥    ॥
 इत्यादिषु श्लोकेषु सत्स्वपि नवत्वम् ।
-यथा वाऽतरङ्गभ्रूभङ्गाऽ
+यथा वा "तरङ्गभ्रूभङ्गा"
 
 लोचनं
 
@@ -247,7 +247,7 @@ __________
 शङ्कतेतेनापीत्यादि ।
 समाधत्तेतथापीत्यादि ।
 परस्परेति ।
-परस्पराभिलाषप्रसरस्य या निरोधपरम्परा तस्या यत्पर्यवसानित्यादिश्लोकस्यऽनानाभङ्गिभ्रमद्भूःऽ इत्यादिश्लोकापेक्षयान्यत्वम् ।
+परस्पराभिलाषप्रसरस्य या निरोधपरम्परा तस्या यत्पर्यवसानित्यादिश्लोकस्य "नानाभङ्गिभ्रमद्भूः" इत्यादिश्लोकापेक्षयान्यत्वम् ।
 
 
 _________________________________________________________
@@ -292,7 +292,7 @@ __________
 उक्तेति ।
 दर्शितेत्यर्थः ।
 सुतरामिति ।
-द्वितीयश्लोकतोऽत्यधिकमित्यर्थः  ॥ २  ॥  ॥ ॥
+द्वितीयश्लोकतो"त्यधिकमित्यर्थः  ॥ २  ॥  ॥ ॥
 मौलं भेदचतुष्टयमिति ।
 अत्यन्ततिरस्कृतवाच्यार्थान्तरसङ्क्रमितवाच्यावविवक्षितवाच्यस्य द्वौ भेदौ, असंलक्ष्यक्रमव्यङ्ग्यसंलक्ष्यक्रमव्यङ्ग्यौ विवक्षितान्यपरवाच्यस्य द्वौ भेदावित्येवमादिमं भेदचतुष्टयमित्यर्थः ।
 उदाहृत्येति ।
@@ -350,7 +350,7 @@ __________
 तथेति ।
 अर्थविशेषा इत्यर्थः ।
 विकटः कविगोचरो यस्या इति व्युत्पत्तिमभिप्रेत्य विवृणोतिकविगोचर इत्यादि  ॥ ३ ॥  ॥ ॥
-ऽएतदेवेऽत्यादिग्रन्थमवतारयतिप्रतिभानामित्यादि ।
+ "एतदेवे"त्यादिग्रन्थमवतारयतिप्रतिभानामित्यादि ।
 ध्वनिकृतमिति ।
 ध्वनिभेदकृतार्थानन्त्यप्रयुक्तमित्यर्थः ।
 अनुद्भिन्नमिति ।
@@ -358,7 +358,7 @@ __________
 उक्तमिति ।
 ध्वनेर्य इत्यादिनोक्तमित्यर्थः ।
 वृत्तिकारेणोक्त इति ।
-ऽयुक्त्यानयेऽत्यादिकारिकाव्याख्यावसर इति शेषः ।
+ "युक्त्यानये"त्यादिकारिकाव्याख्यावसर इति शेषः ।
 संग्रहश्लोक इति ।
 वृत्तिकारकृतः परिकरश्लोक इत्यर्थः ।
 
@@ -376,17 +376,17 @@ __________
 दृष्टपूर्वा अपि ह्यर्थाः काव्ये रसपरिग्रहात् ।
 सर्वे नवा इवाभान्ति मधुमास इव द्रुमाः    ॥ ४ ॥
 तथा हि विवक्षितान्यपरवाच्यस्यैव शब्दशक्त्युद्भवानुरणनरूपव्यङ्ग्यप्रकारसमाश्रयेण नवत्वम् ।
-यथाऽधरणीधारणायाधुना त्वं शेषःऽ इत्यादेः ।
+यथा "धरणीधारणायाधुना त्वं शेषः" इत्यादेः ।
 शेषो हिमगिरिस्त्वं च महान्तो गुरवः स्थिराः ।
 यदलङ्घितमर्यादाश्चलन्तीं बिभ्रते भुवम् ॥ ॥
 इत्यादिषु सत्स्वपि ।
 तस्यैवार्थशक्त्युद्भवानुरणनरूपव्यङ्ग्यसमाश्रयेण नवत्वम् ।
-यथाऽएवंवादिनि देवर्षौऽ इत्यादि श्लोकस्य ।
+यथा "एवंवादिनि देवर्षौ" इत्यादि श्लोकस्य ।
 कृते वरकथालापे कुमार्यः पुलकोद्गमैः ।
 सूचयन्ति स्पृहामन्तर्लज्जयावनताननाः ॥ ॥
 इत्यादिषु सत्स्वर्थशक्त्युद्भवानुरणनरूपव्यङ्ग्यस्य कविप्रौढोक्तिनिर्मितशरीरत्वेन नवत्वम् ।
-यथाऽ
-सज्जेइ सुरहिमासोऽ इत्यादेः ।
+यथा"
+सज्जेइ सुरहिमासो" इत्यादेः ।
 सुरभिसमये प्रवृत्ते सहसा प्रादुर्भवन्ति रमणीयाः ।
 रागवतामुत्कलिकाः सहैव सहकारकलिकाभिः ॥ ॥
 इत्यादिषु सत्स्वप्यपूर्वत्वमेव ।
@@ -403,12 +403,12 @@ __________
 द्रुमान्वयिनमर्थमाहबहिरित्यादि ।
 अर्थान्वयिनमाहप्राक्तनैरित्यादि ।
 का हृद्यतेति ।
-अतश्चऽकृतऽ इत्यादिश्लोकात्ऽएवंवादिनीऽत्यादेःऽसुरभीऽत्यादिश्लोकात्ऽसज्जतीऽत्यादेश्च नवत्वमस्तीति भावः ।
+अतश्च "कृत" इत्यादिश्लोकात् "एवंवादिनी"त्यादेः "सुरभी"त्यादिश्लोकात् "सज्जती"त्यादेश्च नवत्वमस्तीति भावः ।
 सत्यपीत्यादि ।
 एतेषामिति शेषः ।
 एतत्प्रकारानुग्रहान्नूतनत्वं भवत्येवेति सम्बन्धः ।
 यथा
-ऽवाणिअअ इत्थिदन्ताऽ इत्यादिगाथार्थस्य ।
+ "वाणिअअ इत्थिदन्ता" इत्यादिगाथार्थस्य ।
 करिणीवेहव्वअरो मह पुत्तो एक्ककाण्डविणिवाइ ।
 इअसोन्हाएं तह कहो जह कण्डकरण्डअं वहै ॥    ॥
 [करिणीवैधव्यकरो मम पुत्र एककाण्डविनिपाती ।
@@ -437,7 +437,7 @@ __________
 तथा च रामायणमहाभारतादिषु सङ्घामादयः पुनःपुनरभिहिता अपि नवनवाः प्रकाशन्ते ।
 प्रबन्धे चाङ्गी रस एक एवोपनिबध्यमानोऽर्थविशेषलाभं छायातिशयं च पुष्णाति ।
 कस्मिन्निवेति चेत्यथा रामायणे यथा वा महाभारते ।
-रामायेणे हि करुणो रसः स्वयमादिकविनासूत्रितःऽशोकः श्लोकत्वमागतःऽ इत्येवंवादिना ।
+रामायेणे हि करुणो रसः स्वयमादिकविनासूत्रितः "शोकः श्लोकत्वमागतः" इत्येवंवादिना ।
 निर्व्यूढश्च स एव
 
 लोचनं
@@ -449,7 +449,7 @@ __________
 बालप्रिया
 
 एतत्प्रकारेत्यस्य ध्वनिप्रभेदेत्यर्थः ।
-वृत्तौऽशरीरत्वेन नवत्वऽमित्युभयत्र भवतीति शेषः.ऽएककाण्डविनिपातीऽति छाया, तस्य विवरणमेकेन काण्डेनेत्यादि ।
+वृत्तौ "शरीरत्वेन नवत्व "मित्युभयत्र भवतीति शेषः. "एककाण्डविनिपाती"ति छाया, तस्य विवरणमेकेन काण्डेनेत्यादि ।
 काण्डो बाणः   ॥ ४. ॥
 
 सीतात्यन्तवियोगपर्यन्तमेव स्वप्रबन्धमुपरचयता ।
@@ -474,12 +474,12 @@ __________
 
 बालप्रिया
 
-ऽसीतात्यन्तवियोगपर्यन्तमित्यत्रात्यन्तग्रहणफलमाहअत्यन्तग्रहणेनेत्यादि ।
+ "सीतात्यन्तवियोगपर्यन्तमित्यत्रात्यन्तग्रहणफलमाहअत्यन्तग्रहणेनेत्यादि ।
 वृष्णिपाण्डवविरसावसानेत्युक्तं ववृणेति ।
 वृष्णीनामित्यादि ।
 मोक्षलक्षणः पुरुषार्थो मुख्यतया विवक्षाविषयत्वेन सूचित इति यदुक्तं तस्यानुपपत्तिमाशङ्क्य परिहरतियद्यपीत्यादिना ।
 मोक्षे चेत्युक्तमिति ।
-क्वचिद्दग्रन्थेऽभरतर्षभ यदिहास्ति तदन्यत्र यन्नेहास्ति न तत्क्वचिऽदिति च पाठः ।
+क्वचिद्दग्रन्थेऽभरतर्षभ यदिहास्ति तदन्यत्र यन्नेहास्ति न तत्क्वचि "दिति च पाठः ।
 एवमाहुरिति ।
 वक्ष्यमाणं विशेषं द्योतयन्तीत्यर्थः ।
 सर्वस्वमिति ।
@@ -497,7 +497,7 @@ __________
 अङ्गाङ्गिभावश्च यथा रसानां तथा प्रतिपादितमेव ।
 पारमार्थिकान्तस्तत्त्वानपेक्षया शरीरस्येवाङ्गभूतस्य रसस्य पुरुषार्थस्य च स्वप्राधान्येन चारुत्वमप्यविरुद्धम् ।
 ननु महाभारते यावान्विवक्षाविषयः सोऽनुक्रमण्यां सर्व एवानुक्रान्तो न चैत्तत्र दृश्यते, प्रत्युत सर्वपुरुषार्थप्रबोधहेतुत्वं सर्वरसगर्भत्वं च महाभारतस्य तस्मिन्नुद्देशे स्वशब्दनिवेदितत्वेन प्रतीयते ।
-अत्रोच्यतेसत्यं शान्तस्यैव रसास्याङ्गित्वं महाभारते मोक्षस्य च सर्वपुरुषार्थभ्यः प्राधान्यमित्येतन्न स्वशब्दाभिधेयत्वेनानुक्रमण्या दर्शितम्, दर्शितं तु व्यङ्ग्यत्वेनऽभगवान्वासुदेवश्च कीर्त्यतेऽत्र सनातनःऽ इत्यस्मिन् वाक्ये ।
+अत्रोच्यतेसत्यं शान्तस्यैव रसास्याङ्गित्वं महाभारते मोक्षस्य च सर्वपुरुषार्थभ्यः प्राधान्यमित्येतन्न स्वशब्दाभिधेयत्वेनानुक्रमण्या दर्शितम्, दर्शितं तु व्यङ्ग्यत्वेन "भगवान्वासुदेवश्च कीर्त्यतेऽत्र सनातनः" इत्यस्मिन् वाक्ये ।
 अनेन ह्ययमर्थो व्यङ्ग्यत्वेन विवक्षितो यदत्र महाभारते पाण्डवादिचरितं यत्कीर्त्यते तत्सर्वमवसानविरसमविद्याप्रपञ्चरूपञ्च, परमार्थसत्यस्वरूपस्तु भगवान् वासुदेवोऽत्र कीर्त्यते ।
 तस्मात्तस्मिन्नेव परमेश्वरे भगवति भवत भावितचेतसो, मा भूत विभूतिषु निःसारासु रागिणो गुणेषु वा नयविनयपराक्रमादिष्वमीषु केवलेषु केषुचित्सर्वात्मना प्रतिनिविष्टधियः ।
 तथा चाग्रेपश्यत निःसारतां संसारस्येत्यमुमेवार्थे
@@ -523,7 +523,7 @@ __________
 तथाभिमानः प्राधान्याभिमानः ।
 मात्रेऽपि शरीरे इति सम्बन्धः ।
 द्योतयन् स्फुटमेवावभासते व्यञ्चकशक्त्यनुगृहीतश्च शब्दः ।
-एवंविधमेवार्थे गर्भीकृतं सन्दर्शयन्तोऽनन्तरश्लोका लक्ष्यन्तेऽस हि सत्यम्ऽ इत्यादयः ।
+एवंविधमेवार्थे गर्भीकृतं सन्दर्शयन्तोऽनन्तरश्लोका लक्ष्यन्तेऽस हि सत्यम्" इत्यादयः ।
 अयं च निगूढरमणीयोऽर्थो महाभारतावसाने हरिवंशवर्णनेन समाप्तिं विदधता तेनैव कविवेधसा कृष्णद्वैपायनेन सम्यक्स्फुटीकृतः ।
 अनेन चार्थेन संसारातीते तत्त्वान्तरे भक्त्यतिशयं प्रवर्तयता सकल एव सांसारिको व्यवहारः पूर्वपक्षीकृतो न्यक्षेण प्रकाशते ।
 देवतातीर्थतपःप्रभृतीनां च देवतावशेषाणामन्येषां च ।
@@ -543,21 +543,21 @@ __________
 बालप्रिया
 
 अन्वयं दर्शयतिविभूतिष्वित्यादि ।
-वृत्तौऽतथाचेऽत्यादि ।
+वृत्तौ "तथाचे"त्यादि ।
 द्योतयन् शब्दोऽवभासत इति सम्बन्धः ।
-ऽन्यक्षेणेऽति ।
+ "न्यक्षेणे"ति ।
 कात्स्येंनेत्यर्थः ।
 प्राप्त्युपायत्वेन वर्णनमित्यन्वयः ।
 देवताविशेषाणामित्यत्र प्रभावातिशयवर्णनमित्यनुषज्यते ।
-ऽमोक्षस्येऽति ।
+ "मोक्षस्ये"ति ।
 अज्ञाननिवृत्तेरित्यर्थः ।
 वासुदेवसंज्ञाभिधेयत्वेन ब्रह्म विवक्षितमित्यन्वयः ।
-ऽतदभिधानत्वेनऽ वासुदेवसंज्ञाभिधेयत्वेन ।
+ "तदभिधानत्वेन" वासुदेवसंज्ञाभिधेयत्वेन ।
 माथुरो यः प्रादुर्भावस्तेनानुकृतं सकलस्वरूपं येन तत् ।
-ऽन त्विऽत्यादि ।
-ऽविवक्षितऽ इति विपरिमाणामेनानुषङ्गः ।
-हेत्वन्तरमप्याहऽरामयणादिष्विऽत्यादि ।
-ऽपुरुषार्थऽ इतिऽविवक्षितऽ इत्यनेनास्य सम्बन्धः ।
+ "न त्वि"त्यादि ।
+ "विवक्षित" इति विपरिमाणामेनानुषङ्गः ।
+हेत्वन्तरमप्याह "रामयणादिष्वि"त्यादि ।
+ "पुरुषार्थ" इति "विवक्षित" इत्यनेनास्य सम्बन्धः ।
 रामायणादिषु चानया सञ्ज्ञया भगवन्मूर्त्यन्तरे व्यवहारदर्शनात् ।
 निर्णीतश्चायमर्थः शब्दतत्त्वविद्भिरेव ।
 तदेवमनुक्रमणीनिर्दिष्टेन वाक्येन भगवद्य्वतिरेकिणः सर्वस्यान्यस्यानित्यतां प्रकाशयता मोक्षलक्षण एवैकः परः पुरुषार्थः शास्त्रनये, काव्यनये च तृष्णाक्षयसुखपरिपोषलक्षणः शान्तो रसो महाभारतस्याङ्गित्वेन विवक्षित इति सुप्रतिपादितम् ।
@@ -572,14 +572,14 @@ __________
 एतच्च ग्रन्थकारेण तत्त्वालोके वितक्त्योक्तमिह त्वस्य न मुख्योऽवसर इति नास्माभिस्तद्दर्शितम् ।
 सुतरामेवेति यदुक्तं तत्र हेतुमाहप्रसिद्धिश्चेति ।
 चशब्दो यस्मादर्थे ।
-यत इयं लौकिकी प्रसिद्धिरनादिस्ततो भगवद्य्वासप्रभृतीनामप्ययमेवास्वशब्दाभिधाने आशयः, अन्यथा हि क्रियाकारकसम्बन्धादौऽनारायणं नमस्कृत्येऽत्यादिशब्दार्थनिरूपणे च तथाविध एव तस्य भगवत आशय इत्यत्र किं प्रमाणामिति भावः ।
+यत इयं लौकिकी प्रसिद्धिरनादिस्ततो भगवद्य्वासप्रभृतीनामप्ययमेवास्वशब्दाभिधाने आशयः, अन्यथा हि क्रियाकारकसम्बन्धादौ "नारायणं नमस्कृत्ये"त्यादिशब्दार्थनिरूपणे च तथाविध एव तस्य भगवत आशय इत्यत्र किं प्रमाणामिति भावः ।
 विदग्धविद्वद्ग्रहणेनकाव्यनये शास्त्रनय इति चानुसृतम् ।
 रसादिमय एतस्मिन् कविः स्यादवधानवानिति यदुक्तं, तदेव प्रसङ्गागतभारतसम्बन्धनिरूपणानन्तरमुपसंहरतितस्मात्स्थितमिति ।
 
 
 बालप्रिया
 
-ऽगीतादिप्रदेशान्तरेषुऽ इत्यादिकं विवृणोति लोचनेबहूनामित्यादि ।
+ "गीतादिप्रदेशान्तरेषु" इत्यादिकं विवृणोति लोचनेबहूनामित्यादि ।
 काकतालीयवशादिति यदृच्छयेत्यर्थः ।
 इत्यत्रोक्तमिति सम्बन्धः ।
 काशिकावृत्ताविति शेषः ।
@@ -593,7 +593,7 @@ __________
 अस्वशब्दाभिधाने अभिमतस्यार्थस्य स्वशब्देनानभिधाने ।
 आशयः अभिमतो हेतुः ।
 अत्रोपष्टम्भकमाहअन्यथेत्यदि ।
-ऽनारायणं नमस्कृत्येऽत्यादिश्लोकेषु नारायणाद्यथस्य क्रियाकारकभावादिसम्बन्धेन नमस्कारादावन्वयो विवक्षितः ।
+ "नारायणं नमस्कृत्ये"त्यादिश्लोकेषु नारायणाद्यथस्य क्रियाकारकभावादिसम्बन्धेन नमस्कारादावन्वयो विवक्षितः ।
 एवं नारायणाद्यथस्य क्रियाकारकभावादिसम्बन्धेन नमस्कारादावन्वयो विवक्षितः ।
 एवं नारायणादिपदानां विष्ण्वादयोऽर्थाश्च तद्विवक्षा च तस्मात्स्थितमेततङ्गिभूतरसाद्याश्रयेण काव्ये क्रियमाणे नवार्थलाभो भवति बन्धच्छाया च महती सम्पद्यत इति ।
 अत एव च रसानुगुणार्थविशेषोपनिबन्धमलङ्कारान्तरविरहेऽपि छायातिशययोगि लक्ष्ये दृश्यते ।
@@ -617,21 +617,21 @@ __________
 बालप्रिया
 
 लोकप्रसिद्ध्यनुरोधिनीति भावः ।
-ऽअत एवेऽत्यादिऽदृश्यतऽ इत्यन्तं विवृणोतियत इत्यादि ।
+ "अत एवे"त्यादि "दृश्यत" इत्यन्तं विवृणोतियत इत्यादि ।
 तस्या इति ।
 चारुत्वेन प्रतीतेरित्यर्थः ।
-ऽअलङ्कारान्तरविरहेऽपीऽत्यत्रालङ्कारान्तरशब्दं द्वेधा विवृणोतिअलङ्कारान्तरशब्द इत्यादि ।
+ "अलङ्कारान्तरविरहेऽपी"त्यत्रालङ्कारान्तरशब्दं द्वेधा विवृणोतिअलङ्कारान्तरशब्द इत्यादि ।
 इतीति हेतौ ।
 नेत्यादि ।
 किन्तूक्तेन ब्यङ्ग्येनैव छाया पोषितेति भावः ।
-वृत्तौऽअद्भूतरसानुगुणम्ऽ इति ।
+वृत्तौ "अद्भूतरसानुगुणम्" इति ।
 मुन्यालम्बितस्याद्भतरसस्यानुगुणमित्यर्थः ।
 काकतालीयेनेति भावार्थविवरणम् ।
-ऽप्रतिलग्नऽ इति ।
+ "प्रतिलग्न" इति ।
 नायकपार्श्वेन सम्बन्ध इत्यर्थः ।
 असीत्यव्ययं त्वमित्यर्थे ।
 हे सुभग त्वं येन तस्या येन पार्श्वेण अतिक्रान्तः, तस्याः रथ्या तुलाग्रप्रतिलग्नस्स पार्श्वोऽद्यापि स्विद्यतीत्याद्यन्वयः ।
-ऽपरस्परेऽति ।
+ "परस्परे"ति ।
 पार्श्वसम्बन्धातिक्रमणेन नायकगतस्याप्यनुरागस्य प्रतीतेरिति भावः ।
 लोकप्रसिद्य्धाद्भूतमपि नाश्चर्यकारि भवति ।
 न चाक्षुण्णं वस्तूपनिबध्यमानमद्भुतरसस्यैवानुगुणं यावद्रसान्तरस्यापि ।
@@ -650,7 +650,7 @@ __________
 रसप्रतीतिरिति ।
 परस्परहेतुकशृङ्गारप्रतीतिः ।
 अस्यार्थस्य रसानुगुणत्वं व्यतिरेकद्वारेण द्रढयतिसा त्वामित्यादिना ।
-ऽध्वनेर्यस्सगुणीभूतव्यङ्ग्यस्याध्वा प्रदर्शितऽ  इत्युद्योतारम्भे यः श्लोकः तत्र ध्वनेरध्वना कवीनां प्रतिभागुणोऽनन्तो भवतोत्येष भागो व्याख्यात इत्युपसंहरतितदेवमित्यादिना ।
+ "ध्वनेर्यस्सगुणीभूतव्यङ्ग्यस्याध्वा प्रदर्शित"  इत्युद्योतारम्भे यः श्लोकः तत्र ध्वनेरध्वना कवीनां प्रतिभागुणोऽनन्तो भवतोत्येष भागो व्याख्यात इत्युपसंहरतितदेवमित्यादिना ।
 सगुणीभूतव्यङ्ग्यस्येत्यमुं भागं व्याचष्टेगुणीभूतेत्याहिना ।
 त्रिप्रभेदो वस्त्वलङ्काररसात्मना यो व्यङ्ग्यः तस्य यापेक्षा वाच्येगुणीभावः तयेत्यर्थः ।
 तत्र सर्वे ये ध्वनिभेदास्तेषां गुणीभावादानन्त्यमिति तदाहअतिविस्तरेति ।
@@ -761,20 +761,20 @@ __________
 उपस्कार इति ।
 सत्स्वपीत्यादेः न काव्यार्थविरामोऽस्तीत्यनेनान्वय इति भावः ।
 यदीत्यादेर्भावं विवृणोतिविद्यमान इत्यादि ।
-वृत्तौऽबन्धच्छायेऽत्यस्य विवरणम्ऽअर्थद्वयानुरूपशब्दसन्निवेशऽइति ।
+वृत्तौ "बन्धच्छाये"त्यस्य विवरणम् "अर्थद्वयानुरूपशब्दसन्निवेश "इति ।
 तद्रूपा बन्धच्छायेत्यर्थः ।
-ऽअनपेक्षितेऽत्यादिशङ्काग्रन्थः ।
+ "अनपेक्षिते"त्यादिशङ्काग्रन्थः ।
 इतीदं सहृदयानां न नेदीय इति सम्बन्धः ।
 पुनश्शङ्कतेऽशब्दार्थयोऽरित्यादि ।
-ऽकाव्यत्वऽ इति निमित्ते सप्तमी ।
+ "काव्यत्व" इति निमित्ते सप्तमी ।
 शब्दार्थयोः सहितयोः काव्यत्वेन हेतुनेत्यर्थः ।
-ऽतथाविधऽ इति ।
+ "तथाविध" इति ।
 अर्थानपेक्षचतुरमधुरवचनरचन इत्यर्थः ।
-ऽकव्यव्यवस्थेऽति ।
+ "कव्यव्यवस्थे"ति ।
 काव्यव्यपदेश इत्यर्थः ।
-समाधत्तेऽपरेऽत्यादि ।
-ऽतत्काव्यत्वेऽति तत्पदेन परः परामृश्यते ।
-ऽकाव्यसन्दर्भाणाम्ऽ इति ।
+समाधत्तेऽपरे"त्यादि ।
+ "तत्काव्यत्वे"ति तत्पदेन परः परामृश्यते ।
+ "काव्यसन्दर्भाणाम्" इति ।
 तत्काव्यत्वव्यवहार इत्यनुषज्यते ।
 काव्यव्यपदेशः प्रवर्तेत ।
 शब्दार्थयोः साहित्येन काव्यत्वे कथं तथाविधे विषये काव्यव्यवस्थेति चेत्परोपनिबद्धार्थविरचने यथा तत्काव्यत्वव्यवहारस्तथा तथाविधानां काव्यसन्दर्भाणाम् ।
@@ -827,13 +827,13 @@ __________
 आत्मभूतस्य व्यङ्ग्यस्याभाव इत्यर्थः ।
 हानिः अभावः ।
 ननु कीदृशं व्यङ्ग्यं तत्र भवतीत्यत्राहतथाचेत्यादि ।
-वृत्तौऽअनपेक्षितव्यङ्ग्यस्येऽत्येतदप्युक्तरीत्या व्याख्येयम् ।
-ऽतैश्चेऽति ।
-ऽतैःऽ वाच्यार्थैः ।
-ऽप्रथममेवेऽति ।
+वृत्तौ "अनपेक्षितव्यङ्ग्यस्ये"त्येतदप्युक्तरीत्या व्याख्येयम् ।
+ "तैश्चे"ति ।
+ "तैः" वाच्यार्थैः ।
+ "प्रथममेवे"ति ।
 काव्यार्थः सम्पद्यते ।
-तथा ह्यवस्थाभेदान्नवत्वं यथाभगवतीपार्वती कुमारसम्भवेऽसर्वोपमाद्रव्यसमुच्चयेनऽ इत्यादिभिरुक्तिभिः प्रथममेव परिसमापितरूपवर्णनापि पुनर्भगवतः शम्भोर्लोचनगोचरमायान्तीऽवसन्तपुष्पाभरणं वहन्तीऽ मन्मथोपकरणभूतेन भङ्ग्यन्तरेणोपवर्णिता ।
-सैव च पुनर्नवोद्वाहसमये प्रसाध्यमानाऽतां प्राङ्मुखीं तत्र निवेश्य तन्वीम्ऽ इत्याद्युक्तिर्भिर्नवेनैव प्रकारेण निरूपितरूपसौष्ठवा ।
+तथा ह्यवस्थाभेदान्नवत्वं यथाभगवतीपार्वती कुमारसम्भवेऽसर्वोपमाद्रव्यसमुच्चयेन" इत्यादिभिरुक्तिभिः प्रथममेव परिसमापितरूपवर्णनापि पुनर्भगवतः शम्भोर्लोचनगोचरमायान्ती "वसन्तपुष्पाभरणं वहन्ती" मन्मथोपकरणभूतेन भङ्ग्यन्तरेणोपवर्णिता ।
+सैव च पुनर्नवोद्वाहसमये प्रसाध्यमाना "तां प्राङ्मुखीं तत्र निवेश्य तन्वीम्" इत्याद्युक्तिर्भिर्नवेनैव प्रकारेण निरूपितरूपसौष्ठवा ।
 न च ते तस्य कवेरेकत्रैवासकृत्कृता वर्णनप्रकारा अपुनरुक्तत्वेन वा नवनवार्थनिर्भरत्वेन वा प्रतिभासन्ते ।
 दर्शितमेव चैतद्विषमबाणलीलायां ण अ ताण घडै ओही ण अ ते दीसन्ति कह वि पुनरुत्ता ।
 जे विब्भमा पिआणं अत्था वा सुकैवाणीणम् ॥ ॥
@@ -857,14 +857,14 @@ __________
 बालप्रिया
 
 प्रथमसर्ग इत्यर्थः ।
-ऽउपवर्णितेऽति ।
+ "उपवर्णिते"ति ।
 तृतीयसर्ग इति शेषः ।
-ऽनिरूपितरूपसौष्ठवेऽति ।
+ "निरूपितरूपसौष्ठवे"ति ।
 सप्तमसर्ग इति शेषः ।
 ते वर्णनप्रकाराः न च भासन्त इति सम्बन्धः ।
-ऽतस्य कवेरिऽति ।
+ "तस्य कवेरि"ति ।
 कालिदासस्यापि कवेरित्यर्थः ।
-ऽणअऽ इत्यादेः छायां दर्शयति लोचनेन चेत्यादि ।
+ "णअ" इत्यादेः छायां दर्शयति लोचनेन चेत्यादि ।
 प्रियाणां विभ्रमाः कथमपि पुनरुक्ता न दृश्यन्त इत्येतद्विवृणोतिबहुवल्लभ इत्यादि ।
 तदा विभ्रमपौनरुक्त्यं न पश्यतीति सम्बन्धः ।
 तदा परिभोगकाले ।
@@ -901,19 +901,19 @@ __________
 विभ्रमविशेष इत्यर्थः ।
 नवनवत्वमिति ।
 तस्येति शेषः ।
-ऽअर्था वा सुकविवाणीनामिति प्रकृतं विवृणोतितद्वदित्यादि ।
+ "अर्था वा सुकविवाणीनामिति प्रकृतं विवृणोतितद्वदित्यादि ।
 तद्वदिति ।
 तेन तुल्यो भवति नवनवो भवतीत्यर्थः ।
-वृत्तौऽचेतनतत्स्वरूपापेक्षयेऽति ।
+वृत्तौ "चेतनतत्स्वरूपापेक्षये"ति ।
 हिमवतो वर्णनमित्यनुषज्यते ।
-ऽप्रदर्शितं तदिऽति ।
+ "प्रदर्शितं तदि"ति ।
 वर्णितं तदित्यर्थः ।
-ऽअवस्थाभेदेऽपीऽति ।
+ "अवस्थाभेदेऽपी"ति ।
 कौमारादिशरीरावस्थाया भेदाभावेऽपीत्यर्थः ।
-ऽआन्तरेऽति ।
+ "आन्तरे"ति ।
 मानसिकेत्यर्थः ।
-ऽहंसानाम्ऽ इति ।
-ऽकबलितैःऽ भक्षितैः ।
+ "हंसानाम्" इति ।
+ "कबलितैः" भक्षितैः ।
 यैः कूजतां हंसानां निनदेषु कषायकण्ठलुण्ठनादाघर्घरः अन्यः कोऽपि विभ्रमः आसज्यते आसक्तः क्रियत इत्याद्यन्ययः ।
 तच्च यथावस्थितमपि तावदुपनिबध्यमानमित्यत्र तावत्पदं लोचने विवृणोतिउत्तरकालन्त्वित्यादि ।
 देशभेदान्नानत्वमचेतनानां तावत् ।
@@ -942,11 +942,11 @@ __________
 
 स्वपरानुभूतेत्येतत्व्याचष्टेस्वानुभूतेत्यादि ।
 मात्रशब्दार्थविवरणम्विशेषान्तररहितमिति ।
-वृत्तौऽअपरिचितादिस्वलक्षणम्ऽ इति ।
+वृत्तौ "अपरिचितादिस्वलक्षणम्" इति ।
 अपरिचितादीनां वस्तूनां स्वरूपमित्यर्थः ।
 एतच्चोक्तमिति सम्बन्धः ।
 न हीत्यादि कथनं चेत्यर्थः ।
-ऽअत्यन्तासम्भावनार्थम्ऽ इति ।
+ "अत्यन्तासम्भावनार्थम्" इति ।
 अत्यन्तंयदसम्भावनं वस्तूनां विशेषात्मना प्रतिपादनसम्भवाभावस्तदर्थं तत्प्रतिपत्त्यर्थमित्यर्थः ।
 एतदेव विशदयतिप्रत्यक्षेत्यादि ।
 अत एव स प्रकारविशेषो यैरद्यतनैरभिनवत्वेन प्रतीयते तेषामभिमान मात्रमेव भणितकृतं वैचित्र्यमात्रमत्रास्तीति ।
@@ -975,19 +975,19 @@ __________
 कवीनां वस्तुस्वरूपप्रत्यक्षदर्शने सत्यपीत्यर्थः ।
 स्पृश्यत इति ।
 कविवाचेति शेष ।
-वृत्तौऽअनुभाव्येऽति ।
+वृत्तौ "अनुभाव्ये"ति ।
 अनुभाव्यानामनुभवितव्यानां वस्तूनामनुभवानां च यत्सामान्यं सामान्यस्वरूपमित्यर्थः ।
-ऽतस्येऽति ।
+ "तस्ये"ति ।
 अनुभाव्यानुभावसामान्यस्येत्यर्थः ।
-ऽअविषयत्वेऽति ।
+ "अविषयत्वे"ति ।
 पुरातनानामित्यनुषङ्गः ।
-ऽतेषाम्ऽ इति ।
+ "तेषाम्" इति ।
 अद्यतनानामित्यर्थः ।
 इत्यभिमानमात्रमेवेति सम्बन्धः ।
-ऽतत्रोच्यतऽ इत्यस्यानन्तरंऽयत्तूक्तं सामान्यमात्राश्रयेण काव्यप्रवृत्तिऽरित्यादि पाठः ।
-क्वचिद्गन्थे त्वस्मात्पूर्वंऽयदि सामान्यमात्राश्रयेण काव्यप्रवृत्तिस्तत्प्रर्शितप्रकारं काव्यवैचित्र्यमवस्थादिविशेषात्किं पुनरुक्तमेवास्तु न चेत्तथा तत्कर्थं न काव्यानन्त्यम्ऽ इत्यपि पाठः ।
+ "तत्रोच्यत" इत्यस्यानन्तरं "यत्तूक्तं सामान्यमात्राश्रयेण काव्यप्रवृत्ति "रित्यादि पाठः ।
+क्वचिद्गन्थे त्वस्मात्पूर्वं "यदि सामान्यमात्राश्रयेण काव्यप्रवृत्तिस्तत्प्रर्शितप्रकारं काव्यवैचित्र्यमवस्थादिविशेषात्किं पुनरुक्तमेवास्तु न चेत्तथा तत्कर्थं न काव्यानन्त्यम्" इत्यपि पाठः ।
 तदसुरोधी किमितीत्यादि न चेदितीत्यन्तो लोचनग्रन्थः ।
-ऽउक्तिर्हीऽत्यादिग्रन्थस्य भावं विवृणोतिपर्यायेत्यादि ।
+ "उक्तिर्ही"त्यादिग्रन्थस्य भावं विवृणोतिपर्यायेत्यादि ।
 पर्यायमात्रतैव शब्दान्तरेण निर्देश एव ।
 तत्तर्हि ।
 अविकलं वैकल्यं विना ।
@@ -1039,7 +1039,7 @@ __________
 प्रतीताविति शेषः ।
 वस्तुविशेषप्रतीतेः प्रत्याख्यातुमशक्यत्वादित्यर्थः ।
 पुनरुक्तिवैचित्र्यादित्यत्रत्यपुनश्शब्दस्य व्याख्यानम्भूय इति ।
-ऽयश्चायम्ऽ इत्यादिग्रन्थस्य भावार्थविवरणमुपमेत्यादि ।
+ "यश्चायम्" इत्यादिग्रन्थस्य भावार्थविवरणमुपमेत्यादि ।
 उपमा हि विचित्रीभवत्येवेति सम्बन्धः ।
 ननु निभप्रतिमादिशब्दानां समानार्थकत्वात्कथं त चित्र्यमित्यत आहवस्तुत इत्यादि ।
 उपसंहरतिएवमिति ।
@@ -1076,7 +1076,7 @@ __________
 यस्तेत्यन्यपदार्थविवररणमलङ्काराणामित्यादि ।
 विशेषणच्छलेनेति ।
 प्रतिनियतेत्यादिविशेषणव्याजेनेत्यर्थः ।
-ऽमहेऽत्यादेः छायामाहममेत्यादि ।
+ "महे"त्यादेः छायामाहममेत्यादि ।
 मम मम इति भणतः ममायं ममेदमित्यादि भणतः ।
 अत्र ममेति प्रकृतार्थः ।
 मधुमथन इति प्रतीयमानो विरुद्धार्थः ।
@@ -1144,11 +1144,11 @@ __________
 बालप्रिया 
 
 अन्यस्तु ग्रन्थ इति ।
-ऽयत्प्रदर्शितं प्रागिऽतिऽन तच्छक्यमपोहितुम्ऽ इति च ग्रन्थ इत्यर्थः  ॥ ८  ॥  ॥ ॥
+ "यत्प्रदर्शितं प्रागि"ति "न तच्छक्यमपोहितुम्" इति च ग्रन्थ इत्यर्थः  ॥ ८  ॥  ॥ ॥
 चतुर्थेत्यादि ।
-ऽतत्तु भात रसाश्रयाऽदित्यस्यार्थोऽत्र विधीयमान इत्यर्थः ।
+ "तत्तु भात रसाश्रया "दित्यस्यार्थोऽत्र विधीयमान इत्यर्थः ।
 करिकयोरिति ।
-ऽरसभावेऽत्यादेःऽवाचस्पतीऽत्यादेश्च कारकयोरित्यर्थ ।
+ "रसभावे"त्यादेः "वाचस्पती"त्यादेश्च कारकयोरित्यर्थ ।
 
 उपस्कार इति ।
 यद्य् अन्वीयते अन्यैः कविभिः तत्तर्हि इत्यर्थः ।
@@ -1160,11 +1160,11 @@ __________
 व्याचष्ट इति ।
 क्षयं नैतीत्यनेन सह विवृणोतीत्यर्थः ।
 यथाहीतीति ।
-ऽयथाहीऽत्यादिनाऽअभिधातुम्ऽ इत्यन्तग्रन्थेनेत्यर्थः.ऽतद्वदिऽत्यादिकं तु वाचस्पतीत्यादिपादत्रयार्थविवरणम् ।
-वृत्तौऽजगत्प्रकृतिरिऽति ।
+ "यथाही"त्यादिना "अभिधातुम्" इत्यन्तग्रन्थेनेत्यर्थः. "तद्वदि"त्यादिकं तु वाचस्पतीत्यादिपादत्रयार्थविवरणम् ।
+वृत्तौ "जगत्प्रकृतिरि"ति ।
 जगत्कारणभूता प्रकृतिरित्यर्थः ।
-ऽअतीतेऽति ।
-अतीतानां कल्पनां परम्परायामाविर्भून्तः आविर्भावितः विचित्राणां वस्तूनां प्रपञ्चो यया साऽपरीऽति ।
+ "अतीते"ति ।
+अतीतानां कल्पनां परम्परायामाविर्भून्तः आविर्भावितः विचित्राणां वस्तूनां प्रपञ्चो यया सा "परी"ति ।
 परिक्षीणा नष्टा अपरपदार्थानां निर्माणशक्तिर्यस्यास्सेत्यर्थः ॥ १॥
 , १० ॥
 
@@ -1217,12 +1217,12 @@ __________
 बालप्रिया
 
 लोचनेसंवादा इत्यादि ।
-ऽसंवादाऽ इत्यादिऽसुमेधसाम्ऽ इत्यन्तं कारिकायाः प्रथमार्धं,ऽनैकेऽत्यादिऽविपश्चितेऽ त्यन्तं द्वितीयार्धं चेत्यर्थः ।
-अत्र सुमेधसां संवादा इत्यस्य सुमेधसां बुद्धीनां काव्यानां च संवादा इत्यर्थ इत्यभिप्रेत्यऽस्थितं ह्येतदिऽत्यादिकंऽसंवादो हि काव्यार्थस्योच्यतऽ इति च वृत्तावुक्तमिति बोध्यम् ॥११ ॥
+ "संवादा" इत्यादि "सुमेधसाम्" इत्यन्तं कारिकायाः प्रथमार्धं, "नैके"त्यादि "विपश्चिते" त्यन्तं द्वितीयार्धं चेत्यर्थः ।
+अत्र सुमेधसां संवादा इत्यस्य सुमेधसां बुद्धीनां काव्यानां च संवादा इत्यर्थ इत्यभिप्रेत्य "स्थितं ह्येतदि"त्यादिकं "संवादो हि काव्यार्थस्योच्यत" इति च वृत्तावुक्तमिति बोध्यम् ॥११ ॥
 ख एडीकृत्य(?) वृत्तौ व्याख्यातेति ।
 केषुचित्पुस्तकेष्विति शेषः ।
 अत एव वक्ष्यतेकेषुचित्पुस्तकेषु कारिका अखण्डीकृता एव दृश्यन्त इति ।
-खण्डीकृत्य व्याख्यानं तुऽसंवादो ह्यन्यसादृश्यम्ऽऽसंवादो हि काव्यार्थस्योच्यते, यदन्येन काव्यवस्तुना सादृश्यम्, तत्पुनः प्रतिबिम्बवत्, तत्पुनश्शरीरिणां प्रतिबिम्बवत्ऽ इत्यादिकं बोध्यम् ।
+खण्डीकृत्य व्याख्यानं तु "संवादो ह्यन्यसादृश्यम् " "संवादो हि काव्यार्थस्योच्यते, यदन्येन काव्यवस्तुना सादृश्यम्, तत्पुनः प्रतिबिम्बवत्, तत्पुनश्शरीरिणां प्रतिबिम्बवत्" इत्यादिकं बोध्यम् ।
 प्रतिवाक्यमित्यादि ।
 शरीरिणामित्यस्य प्रतिबिम्बादिभिस्त्रिभिस्सम्बन्ध इति भावः ।
 अन्यदालेख्यप्रख्यमन्यत्तुल्येन शरीरणा सदृशम् ।
@@ -1267,14 +1267,14 @@ __________
 
 बालप्रिया
 
-वृत्तौऽकाव्यार्थस्येऽति पूरतम् ।
-काव्यार्थगतमन्यसादृश्यं विवृणोतिऽयदन्येनेऽत्यादि ।
+वृत्तौ "काव्यार्थस्ये"ति पूरतम् ।
+काव्यार्थगतमन्यसादृश्यं विवृणोति "यदन्येने"त्यादि ।
 प्रतिबिम्बवदित्यादित्रये षष्ट्यन्ताद्वतिः ।
 प्रतिबिम्बे अन्यसादृश्यं शरीरिणा बिम्बेन सादृश्यमेवमालेख्याकारतुल्यदेहनोश्च शरीरिणा सादृश्यं बोध्यम् ।
-ऽकिञ्चिद्धीऽत्यादिफलितरथकथनम् ।
+ "किञ्चिद्धी"त्यादिफलितरथकथनम् ।
 तत्र शरीरिण इत्येतत्पदस्य विवरणं लोचनेपूर्वमेवेत्यादि ।
-नान्यसाम्यं त्यजेत्कविरित्युक्त्या गम्यस्यार्थस्य विवरणं वृत्तौऽपरिहर्तव्यं सुमतिनेऽति ।
-ऽत्यक्तव्यम्ऽ इति च  ॥ १२  ॥  ॥ ॥
+नान्यसाम्यं त्यजेत्कविरित्युक्त्या गम्यस्यार्थस्य विवरणं वृत्तौ "परिहर्तव्यं सुमतिने"ति ।
+"त्यक्तव्यम्" इति च  ॥ १२  ॥  ॥ ॥
 तात्विकशरीरशून्यमित्यनन्यात्मेत्यस्य विवरणमित्यन्यथा प्रतिपत्तिः स्यादित्यतो लोचने विवृणोतअनन्य इत्यादि ।
 भातीति ।
 काव्यवस्त्विति शेषः ।
@@ -1339,11 +1339,11 @@ __________
 एतदेवेत्यत्रत्यैतत्पदार्थविवरणम्तृतीयस्येत्यादि ।
 आत्मन इत्यस्यार्थो निरूपित इति सम्बन्धः तत्त्वस्य सारभूतस्येति चात्मपदार्थविवरणमिति भावः ।
 वृत्तौ ।
-ऽपूर्वस्थितीऽ त्याद्युक्तस्यैव विवरणंऽपुराणेऽत्यादि ।
-ऽपुष्यतीऽ त्यन्तम् ।
-ऽपुराणेऽति ।
+ "पूर्वस्थिती" त्याद्युक्तस्यैव विवरणं "पुराणे"त्यादि ।
+ "पुष्यती" त्यन्तम् ।
+ "पुराणे"ति ।
 पुराणी रमणीया च या छाया तयानुगृहीतमित्यर्थः ।
-ऽशरीरवत्ऽ शरीरेण तुल्यम् ॥१४ ॥  ॥ ॥
+ "शरीरवत्" शरीरेण तुल्यम् ॥१४ ॥  ॥ ॥
 कारिकायां वस्तुरचनेत्यत्र वस्तुपदं विवृणोति लोचनेवस्तुशब्देनेत्यादि ।
 शक्यन्ते ।
 तानि तु तान्येवोपनिबद्धानि न काव्यादिषु नवतां विरुध्यन्ति ।
@@ -1379,10 +1379,10 @@ __________
 श्लेषादिस्वभावानीत्यर्थः ।
 सद्वृत्ततेजस्विगुणद्विजादयो हि शब्दाः पूर्वपूर्वैरपि कविसहस्रैः श्लेषच्छायया निबध्यन्ते, निबद्धाश्चन्द्रादयश्चोपमानत्वेन ।
 तथैव पदार्थरूपाणीत्यत्र नापूर्वाणि घटयितुं शक्यन्ते इत्यादि विरुध्यन्तीत्येवमन्तं प्राक्तनं वाक्यमभिसन्धानीयम्  ॥ १५  ॥  ॥ ॥
-ऽलोक्येऽति व्याचष्टेसहृदयानामिति ।
+ "लोक्ये"ति व्याचष्टेसहृदयानामिति ।
 चमत्कृतिरिति ।
 आस्वादप्रधाना बुद्धिरित्यर्थः ।
-ऽअभ्युज्जीहीतऽ इति व्याचष्टेउत्पद्यत इति ।
+ "अभ्युज्जीहीत" इति व्याचष्टेउत्पद्यत इति ।
 उदेतीत्यर्थः ।
 बुद्धेरेवाकारं दर्शयतिस्फुरणेयं काचिदिति ।
 यदपि तदपि रम्यं यत्र लोकस्य किञ्चि      त्स्फुरितमिदमितीयं बुद्धिरभ्युज्जिहीते ।
@@ -1404,11 +1404,11 @@ __________
 अनुषञ्जनीयमित्यर्थः ।
 कारिकायां यत्रेत्युक्त्या तत्रेत्यध्याहृत्य काव्यवस्तुनीत्यनेन योज्यम् ।
 यत्रेत्यस्य स्थाने या त्विति वा पाठः ।
-कारिकायांऽयदपीऽत्यादि ।
-ऽयदपि तदपिऽ यत्किञ्चित्तद्वस्त्वपि ।
-ऽरम्यंऽ काव्ये चारु भवति ।
-तत्पदार्थं विवृणोतिऽयत्रेऽत्यादि ।
-ऽयत्रऽ निबद्धे यस्मिन् वस्तुनि ।
+कारिकायां "यदपी"त्यादि ।
+ "यदपि तदपि" यत्किञ्चित्तद्वस्त्वपि ।
+ "रम्यं" काव्ये चारु भवति ।
+तत्पदार्थं विवृणोति "यत्रे"त्यादि ।
+ "यत्र" निबद्धे यस्मिन् वस्तुनि ।
 इदं किञ्चित्स्फुरितमितीयं बुद्धिः लोकस्य उज्जिहीते इत्यन्वयः ।
 तदनुगतमपि पूर्वच्छायया वस्तु तादृक्तादृक्षं सुकविर्विवक्षितव्यङ्ग्यवाच्यार्थसमर्पणसमर्थशब्दरचनारूपया बन्धच्छाययोपनिबध्नन्निन्धतां नैव याति ।
 तदित्थं स्थितं प्रतायन्तां वाचो निमितविविधार्थामृतरसा न सादः कर्तव्यः कविभिरनवद्ये स्वविषये ।
@@ -1436,20 +1436,20 @@ __________
 
 बालप्रिया
 
-तत्र लोकस्येत्यादेर्विवरणं वृत्तौऽस्फुरणेयम्ऽ इत्यादि ।
+तत्र लोकस्येत्यादेर्विवरणं वृत्तौ "स्फुरणेयम्" इत्यादि ।
 तदेतद्दर्शयन्नाह लोचनेलोकस्येत्यादि ।
 खण्डीकृत्य पठितेति ।
-ऽयदपीऽत्यादिकारिकापूर्वार्धं पाठानन्तरंऽस्फुरणेयऽमित्यादिवृत्तिग्रन्थपाठः, स्तदनन्तरंऽअनुगतमपीऽत्याद्युत्तरार्धपाठः, तदनम्तरंऽगतम्ऽ इत्यादिवृतितग्रन्थपाठश्चेति भावः  ॥ १६  ॥
-ऽप्रतायम्ताम्ऽ इति ।
+ "यदपी"त्यादिकारिकापूर्वार्धं पाठानन्तरं "स्फुरणेय "मित्यादिवृत्तिग्रन्थपाठः, स्तदनन्तरं "अनुगतमपी"त्याद्युत्तरार्धपाठः, तदनम्तरं "गतम्" इत्यादिवृतितग्रन्थपाठश्चेति भावः  ॥ १६  ॥
+ "प्रतायम्ताम्" इति ।
 निमिताः तुलिताः विविधार्थामृतरसाः अमृतरसतुल्याः विविधार्थाः याभिः ताः, यावन्तोऽर्थास्तावत्य इति भावः ।
-यथा माधेऽयावदर्थपदां वाचम्ऽ इति ।
+यथा माधेऽयावदर्थपदां वाचम्" इति ।
 वाचः काव्यरूपाः ।
-कविभिःऽप्रतायन्तांऽ सविस्तराः निबध्यन्ताम् ।
-ऽअनवद्येऽ भिर्देषे ।
-ऽस्वविषयेऽ काव्यवस्तुनि विषये कविभिःऽसादःऽ मनस्सादः, कुतः खल्वपूर्वमानयमीत्यादिचिन्तया विषाद इति यावत् - न कर्तव्यः, कुत इत्यत्राहऽपरस्वेऽत्यादि ।
-ऽवस्तुऽ काव्यम् ।
+कविभिः "प्रतायन्तां" सविस्तराः निबध्यन्ताम् ।
+ "अनवद्ये" भिर्देषे ।
+ "स्वविषये" काव्यवस्तुनि विषये कविभिः "सादः" मनस्सादः, कुतः खल्वपूर्वमानयमीत्यादिचिन्तया विषाद इति यावत् - न कर्तव्यः, कुत इत्यत्राह "परस्वे"त्यादि ।
+ "वस्तु" काव्यम् ।
 सुकवेर्घटयतीति सम्बन्धः ।
-ऽयथेष्टंऽ कवेरिष्टमनतिक्रम्य इति कारिकार्थं स्पष्टं मत्वा स्वविषय इत्यत्र पूरयति लोचनेस्वयं तात्कालिकत्वेनास्फुरित इति ।
+ "यथेष्टं" कवेरिष्टमनतिक्रम्य इति कारिकार्थं स्पष्टं मत्वा स्वविषय इत्यत्र पूरयति लोचनेस्वयं तात्कालिकत्वेनास्फुरित इति ।
 तत्काले कवेरस्फुरित इत्यर्थः ।
 अनेन सादस्य हेतुर्दर्शितः ।
 पूर्वोपस्कारेण सह पठतीति ।
@@ -1539,12 +1539,12 @@ __________
 अत एव ध्वनेः कल्पतरुसाम्यप्रयोजकं दर्शयन्नाहसर्वेत्यादि ।
 समीहितं प्रीत्यादि ।
 तदेकायत्ता ध्वन्येकप्रयुक्ता ।
-सत्काव्येऽति ।
-सत्काव्यत्वस्य ध्वनिस्वरूपस्यऽनयवर्त्म, न्याय्यमार्गः साधकं युक्तिजातमित्यर्थः ।
-ऽचिरेऽति ।
+सत्काव्ये"ति ।
+सत्काव्यत्वस्य ध्वनिस्वरूपस्य "नयवर्त्म, न्याय्यमार्गः साधकं युक्तिजातमित्यर्थः ।
+ "चिरे"ति ।
 चिरकालादारभ्य प्रसुप्ततुल्यं स्फुटमप्रकाशमित्यर्थः ।
-ऽपरिपक्वधियांऽ परिणतपरोज्ञातां पूर्वेषां ग्रन्थकृताम् ।
-ऽतदिऽति ।
+ "परिपक्वधियां" परिणतपरोज्ञातां पूर्वेषां ग्रन्थकृताम् ।
+ "तदि"ति ।
 ध्वनिस्वरूपं तत्सा तद्य्वाकरोत्सहृदयोदयलाभहेतो      रानन्दवर्धन इति प्रथिताभिधानः ॥
 इति श्रीराजानकानन्दवर्धनाचार्यविरचिते ध्वन्यालोके चतुर्थ उद्द्योतः समाप्तोऽयं ग्रन्थः ॥
 लोचनम्   तद्व्याकरोत्सहृदयोदयलाभहेतोः  इति सम्बन्धाभिधेयप्रयोजनोपसंहारः ।
@@ -1559,11 +1559,11 @@ __________
 बालप्रिया
 
 धकं युक्तजातं चेत्यर्थः ।
-ऽव्याकरोत्ऽ विशदीकृतवान् ।
-ऽसहृदयेऽति ।
+ "व्याकरोत्" विशदीकृतवान् ।
+ "सहृदये"ति ।
 सहृदयानां य उदय अभ्युदयः ध्वनिस्वरूपावबोधहेतुका प्रीतिः तल्लाभस्य हेतोः ।
 तल्लाभरूपप्रयोजनायेत्यर्थः ।
-ऽतेन ब्रूमः सहृदयमनः प्रीतये तत्स्वरूपम्ऽ इत्युपक्रमानुरूपोऽयमुपसंहारः ।
+ "तेन ब्रूमः सहृदयमनः प्रीतये तत्स्वरूपम्" इत्युपक्रमानुरूपोऽयमुपसंहारः ।
 श्लोकार्थं स्पष्टं मत्वा वक्तव्यमंशं विवृणोति लोचनेसत्काव्येत्यादि ।
 इतिसम्बन्धाभिधेयप्रयोजनोपसंहार इति ।
 सम्बन्धः ध्वनिस्वरूपस्यैतद्गन्थस्य च प्रतिपाद्यप्रतिपादकभावः ।
